Fix logo problem on customify dark mode combined with user light mode

--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -16,6 +16,10 @@
   .user-dark-mode & {
     opacity: 1;
   }
+
+  .user-light-mode & {
+    opacity: 0;
+  }
 }
 
 .c-logo__default,
