--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1638,6 +1638,8 @@ table {
   .is-dark-mode .c-logo__inverted,
   .user-dark-mode .c-logo__inverted {
     opacity: 1; }
+  .user-light-mode .c-logo__inverted {
+    opacity: 0; }
 
 .c-logo__default,
 .c-logo__inverted {
